# Autoindexer

./: Book  CMakeLists.txt  Driver.cpp  Driver.h  JPString.cpp  JPString.h  JPVector.h  VectorTests.cpp  WarAndPeaceBook1.txt  book.txt  book1.txt  catch.hpp  input.txt  keywords1.txt  main.cpp  test.cpp
.github/workflows/: build.yaml
output/: output.txt
src/: Driver.cpp  Driver.h  JPString.cpp  main.cpp
test/: WarAndPeaceBook1.txt  keywords.txt  test.cpp
